[package]
name = "opl3-rs"
description = "Rust bindings for Nuked-OPL3, a Yamaha OPL3 FM-synthesis chip emulation library."
authors = ["Daniel Balsom", "Nuke.YKT"]
license = "LGPL-2.1"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/dbalsom/opl3-rs"
keywords = ["OPL", "emulation", "audio", "synthesizer", "retro"]
categories = ["multimedia::audio", "emulators"]
build = "build.rs"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
heck = "0.5.0"

[dependencies]
thiserror = "1.0"

[workspace]
members = [
    "examples/*",
]